# HyLight-Demo

./: .gitignore  Makefile  README.md  docker-compose.yml  render.yaml  schema.sql
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: comments.py  health.py  http_errors.py  photos.py  router.py  users.py
backend/app/core/: config.py  database.py  logging.py  redis_client.py  security.py
backend/app/models/: __init__.py  comment.py  photo.py  user.py
backend/app/repositories/: base.py  comment_repository.py  photo_repository.py  user_repository.py
backend/app/schemas/: comment.py  common.py  photo.py  user.py
backend/app/services/: ai_service.py  comment_service.py  image_utils.py  photo_service.py  photo_tasks.py  storage_service.py  user_service.py
backend/scripts/: test_db.py
supabase/migrations/: 001_initial_schema.sql  002_storage_policies.sql  002_storage_policies_Photos.sql
